<resources>
    <string name="app_name">Assignment2</string>
    <string name="first_name">First Name</string>
    <string name="family_name">Family Name</string>
    <string name="nickname">Nickname</string>
    <string name="age">Age</string>
    <string name="zero">0</string>
    <string name="score">Score</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="title_activity_quiz">QuizActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="options">Options</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
</resources>
